--- a/style/configs/clangd.yaml
+++ b/style/configs/clangd.yaml
@@ -1,13 +1,14 @@
-# --------------------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 # Echo Engine Project - Apache 2.0 License
 
 # Part of the Echo Engine Project, a modular C++ engine designed for
 # flexibility, maintainability, and scalability.
 
 # To ensure consistency across all modules, the Sierra Style Guide establishes
-# comprehensive coding conventions, formatting rules, and tooling configurations.
-# This includes rules for C++ formatting, language server behavior,
-# static analysis, and guidelines for naming, structure and module interaction.
+# comprehensive coding conventions, formatting rules, and tooling
+# configurations. This includes rules for C++ formatting, language server
+# behavior, static analysis, and guidelines for naming, structure and module
+# interaction.
 
 # All contributors are expected to adhere to the Sierra Style Guide,
 # ensuring that code across the entire ecosystem is readable, maintainable,
@@ -22,7 +23,7 @@
 
 # Module : Sierra - Shared
 # Copyright (c) 2025 Echo Engine Project contributors
-# --------------------------------------------------------------------------------
+# ------------------------------------------------------------------------------
 
 CompileFlags:
   Compiler: clang++
